--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "express": "^4.18.2",
     "dotenv": "^16.4.5",
-    "node-telegram-bot-api": "^0.64.0"
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.64.0",
+    "puppeteer": "^23.0.2"
   }
 }
