--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
     "start": "node app"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.7.4",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.64.0",
-    "puppeteer": "^23.0.2"
+    "node-telegram-bot-api": "^0.64.0"
   }
 }
